--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     // ==============================
     // CONFIGURACIÓN DE SUPABASE
     // ==============================
-    const supabaseUrl = 'TU_SUPABASE_URL';      // Reemplaza con tu URL de Supabase
-    const supabaseKey = 'TU_SUPABASE_ANON_KEY'; // Reemplaza con tu anon key
+    const supabaseUrl = 'https://xqxkcijmsdnjmuhyzvsj.supabase.co';      // Reemplaza con tu URL de Supabase
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhxeGtjaWptc2Ruam11aHl6dnNqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjMwNDUxNzgsImV4cCI6MjA3ODYyMTE3OH0.flvMDAfepvWMp88IU37bGoawhsE52c2GF-I1IKKdzQA'; // Reemplaza con tu anon key
     const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
     // ==============================
